# Olav

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_REFACTOR_SUMMARY.md  ARCHITECTURE_REVIEW.md  AUDIT_REPORT.md  AUDIT_REPORT_UPDATED.md  CHANGELOG.md  CHECKLIST_E2E_COMPLETE.md  CLAUDE.md  CLAUDE_CODE_MIGRATION_PROGRESS.md  CLAUDE_CODE_SKILL_MIGRATION.md  CLI_USER_GUIDE.md  CODE_REUSE_ANALYSIS.md  COMPLETION_REPORT.md  COMPREHENSIVE_L1L4_QUICK_REFERENCE.md  COMPREHENSIVE_L1L4_SIMPLIFICATION.md  CONFIG_AUTHORITY.md  CONFIG_AUTHORITY_EXTENDED.md  DELIVERY_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DESIGN_V0.8.md  DESIGN_V0.81.md  DEVELOPMENT_v0.8.1.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.server  Dockerfile.tests  E2E_TESTS_VERIFICATION.md  E2E_TEST_IMPROVEMENT_REPORT.md  E2E_TEST_RESULTS.md  E2E_TEST_SUMMARY.md  FINAL_CHECKLIST.md  FINAL_DELIVERY_CHECKLIST.md  FINAL_DELIVERY_REPORT.md  FINAL_TEST_REPORT.md  IMPLEMENTATION_PROGRESS.md  LICENSE  MANUAL_TESTING_QUICKSTART.md  MANUAL_TEST_RESULTS.md  (+80 more)
.claude/: claude.md  ralph-loop.local.md
.github/: copilot-instructions.md
.olav/: .agent_memory.json  .cli_history  OLAV.md  capabilities.db  settings.json  settings.json.example
.olav/commands/: analyze.md  analyze.py  backup.md  backup.py  batch-query.md  batch-query.py  list-devices.md  list-devices.py  logs.py  network_inspect.py  nornir-execute.md  nornir-execute.py  query.py  reload-knowledge.md  reload-knowledge.py  search-capabilities.md  search-capabilities.py  search-knowledge.md  search-knowledge.py  smart-query.md  smart-query.py  snapshot.py  sync-knowledge.md  sync-knowledge.py
.olav/inspect_templates/: interface-errors.html.j2
.olav/knowledge/: aliases.md  command-templates.md  conventions.md  network-topology.md  troubleshooting-guide.md
.olav/reports/: bgp-audit-20260108-174217.html  bgp-audit-20260108-174230.html  bgp-audit-20260108-174323.html  bgp-audit-20260108-185226.html  health-check-20260108-174217.html  health-check-20260108-174226.html  health-check-20260108-174230.html  health-check-20260108-174323.html  health-check-20260108-174324.html  health-check-20260108-185226.html  interface-errors-20260108-174217.html  interface-errors-20260108-174230.html  interface-errors-20260108-174323.html  interface-errors-20260108-185226.html  lab-anomalies-20260108-180657.html  lab-anomalies-20260108-184440.html  lab-comprehensive-l1l4-20260108-180657.html  lab-comprehensive-l1l4-20260108-184440.html  lab-l1-physical-20260108-180657.html  lab-l1-physical-20260108-184440.html  manual-bgp-audit-20260108-173204.html  manual-bgp-audit-20260108-173231.html  manual-health-check-20260108-173204.html  manual-health-check-20260108-173231.html  manual-interface-errors-20260108-173204.html  manual-interface-errors-20260108-173231.html  manual-security-baseline-20260108-173231.html  manual-test-report-20260108-173116.html  manual-test-report-20260108-173116.json  manual-test-report-20260108-173116.md  manual-test-report-20260108-173204.html  manual-test-report-20260108-173204.json  manual-test-report-20260108-173204.md  manual-test-report-20260108-173231.html  manual-test-report-20260108-173231.json  manual-test-report-20260108-173231.md
.olav/scratch/: R1-running-config.txt  R2-running-config.txt  R3-running-config.txt  R4-running-config.txt  SW1-running-config.txt  SW2-running-config.txt  r1-l1l4-inspection.md
.olav/skills/: bgp-audit.md  config-backup.md  configuration-management.md  (+7 more)
archive/deepagents/libs/harbor/: Makefile  README.md  pyproject.toml
archive/deepagents/libs/harbor/deepagents_harbor/: __init__.py  analysis.py  backend.py  deepagents_wrapper.py  tracing.py
archive/deepagents/libs/harbor/scripts/: analyze.py  create_langsmith_dataset.py
claude-code-migration/: CLAUDE.md  README.md
client/: README.md  pyproject.toml
client/src/olav_client/: __init__.py
client/src/olav_client/cli/: __init__.py  commands.py  thin_client.py
config/: __init__.py  banners.py  cli_blacklist.yaml  command_blacklist.txt  cron.py  inventory.example.csv  logging.py  olav.example.yaml  paths.py  settings.py  suzieq-cfg.yml
docs/: 00_START_HERE.md  AGENT_ARCHITECTURE_REFACTOR.md  AGENT_MIGRATION_GUIDE.md  ARCHITECTURE_EVALUATION.md  AUDIT_REPORT_20251214.md  AUTHENTICATION_GUIDE.md  CLAUDE_CODE_QUICK_START.md  CLAUDE_CODE_SKILL_MIGRATION.md  CLEANUP_INDEX.md  CLI_CROSS_HOST_DEPLOYMENT.md  DATA_KB_DIRECTORY_GUIDE.md  DEEP_DIVE_ARCHITECTURE_V2.md  DEPLOYMENT.md  DESIGN.md  DESIGN_V0.8.md  DISPLAY_THINKING_CONFIG.md  DOCUMENTATION_INDEX.md  HEALTH_CHECK_PROBLEM_AND_SOLUTION.md  HEALTH_CHECK_QUICK_REFERENCE.md  IMPLEMENT_PLAN.md  INSPECTION_BACKUP_CONFIG.md  INSPECTION_MODE.md  INSPECTION_SKILLS_QUICK_REFERENCE.md  JWT_SECRET_KEY_FIX.md  KNOWN_ISSUES_AND_TODO.md  KNOWN_ISSUES_AND_TODO.md.bak  LLM_STREAMING_GUIDE.md  MIGRATION_DOCUMENTATION_INDEX.md  OLAV_V0.8_COMPLETE_SUMMARY.md  OVER_ENGINEERING_AUDIT.md  PHASE_B_COMPLETION_SUMMARY.md  PHASE_C4_COMPLETION.md  PHASE_C_FINAL_SUMMARY.md  QUICKSTART.md  QUICKSTART_V0.8.md  README_ANALYSIS.md  README_MIGRATION.md  README_UPDATES.md  README_ZH.md  REFACTOR_SERVER_MODULARIZATION.md  (+9 more)
i18n/: README_zh.md  zh.md
k8s/: olav-deployment.yaml
scripts/: add_olav_tag.py  benchmark_agents.py  check_netbox.py  check_ospf_syslog.py  create_test_parquet.py  debug_data.py  debug_delete_lo11.py  debug_health_local.py  debug_r3_lo33_cli.py  e2e_perf_test.py  generate_dev_token.py  index_bgp_diagnosis.py  index_knowledge.py  init.py  init_capabilities.py  migrate_olav_to_agent.py  migrate_to_claude_code.py  netbox_ingest.py  reinit_capabilities.py  setup_device_transport.py  test_expert_guard.py  test_funnel_debug.py  test_guard_workflow.py  test_inspection_hitl.py  test_kb_search.py  test_netbox_hitl.py  test_stream.py  verify_claude_compat_enhanced.py  verify_initialization.py
tests/: conftest.py  test_claude_migration_c3.py  test_deployment_c4.py  test_settings_configuration.py
webgui/: .env.example  .gitignore  Dockerfile  README.md  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js
(+685 files in other folders)
