[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "olav"
version = "0.8.0"
description = "OLAV - Network Operations AI Assistant with DeepAgents"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "OLAV Team"}
]
license = {text = "MIT"}

dependencies = [
    # LLM & Agents
    "langchain>=0.1.0",
    "langchain-openai>=0.0.1",
    "langchain-ollama>=0.1.0",
    "langchain-core>=0.1.0",
    
    # DeepAgents Framework
    # Note: Will be added from archive/deepagents/
    
    # Data Processing
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    
    # Database
    "duckdb>=0.8.0",
    "sqlalchemy>=2.0",
    
    # Network Tools
    "nornir>=3.3.0",
    "nornir-netmiko>=0.1.1",
    
    # API & HTTP
    "httpx>=0.24.0",
    "requests>=2.31.0",
    
    # CLI
    "typer>=0.9.0",
    "rich>=13.0",
    
    # Utilities
    "python-dotenv>=1.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "black>=23.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "ANN", "ASYNC", "S", "B"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --tb=short"
testpaths = ["tests"]
asyncio_mode = "auto"
