[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/olav", "config"]

[project]
name = "olav"
version = "0.8.0"
description = "OLAV - Network Operations AI Assistant with DeepAgents"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "OLAV Team"}
]
license = {text = "MIT"}

dependencies = [
    # LLM & Agents
    "langchain>=0.1.0",
    "langchain-openai>=0.0.1",
    "langchain-ollama>=0.1.0",
    "langchain-core>=0.1.0",
    # DeepAgents Framework
    # Note: Will be added from archive/deepagents/
    # Data Processing
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    # Database
    "duckdb>=0.8.0",
    "sqlalchemy>=2.0",
    # Network Tools
    "nornir>=3.3.0",
    "nornir-netmiko>=0.1.1",
    # API & HTTP
    "httpx>=0.24.0",
    "requests>=2.31.0",
    # CLI
    "typer>=0.9.0",
    "rich>=13.0",
    "prompt-toolkit>=3.0.0", # Phase 6: Enhanced CLI input
    # Phase 5: Report Generation
    "jinja2>=3.1.0",
    # Utilities
    "python-dotenv>=1.0",
    "python-dateutil>=2.8.0",
    # Phase 5: Report Generation
    "jinja2>=3.1.0",
    "deepagents",
]

[project.scripts]
olav = "olav.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "black>=23.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pytest-timeout>=2.4.0",
]

[tool.uv.sources]
deepagents = { path = "archive/deepagents/libs/deepagents" }

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "ANN", "ASYNC", "S", "B"]
ignore = ["ANN101", "ANN102", "E402"]  # E402: Intentional for dotenv loading

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S101"]
"src/olav/__main__.py" = ["E402"]
"src/olav/main.py" = ["E402"]
"src/olav/cli/cli_main.py" = ["E402"]
"src/olav/core/settings.py" = ["ANN401"]  # Settings must accept Any type values
"src/olav/core/llm.py" = ["ANN401"]  # LLM factory needs **kwargs

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests/unit", "tests/e2e"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src/olav",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=70",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "e2e: End-to-end tests (slow, requires real devices/LLM)",
    "integration: Integration tests (requires external services)",
    "llm: Tests requiring real LLM API calls",
    "network: Tests requiring network device access",
    "slow: Slow-running tests",
]
asyncio_mode = "auto"
timeout = 300  # 5 minutes default timeout
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/olav"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
