[project]
name = "olav-client"
version = "0.5.0-beta"
description = "OLAV (NetAIChatOps) - Lightweight CLI client"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
  "prompt-toolkit>=3.0.0",
  "httpx[http2]>=0.27.0",
  "pydantic>=2.0.0",
]

[project.scripts]
olav = "olav_client.cli.commands:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
